[package]
name = "bevy_mod_raycast"
version = "0.2.2"
authors = ["Aevyrie <aevyrie@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Ray Casting for the Bevy Engine."
repository = "https://github.com/aevyrie/bevy_mod_raycast/"
keywords = ["gamedev", "graphics", "bevy", "3d", "raycast"]
categories = ["game-engines", "rendering"]

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
rev = "7d0e98f34c43eb62522c0c65de64f7b458b899be"
default-features = false
features = ["render"]

[dev-dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
rev = "7d0e98f34c43eb62522c0c65de64f7b458b899be"
default-features = false
features = ["render", "bevy_wgpu", "bevy_winit", "bevy_gltf", "x11"]